# sp1-tree

./: .gitignore  shell.nix
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: main.rs  tree.rs
script/: Cargo.toml  rust-toolchain
script/src/: main.rs  tree.rs
