[workspace]
[package]
version = "0.1.0"
name = "store-tree-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
hex = "0.4"
trivial_tree = { version = "0.1.0", path = "../../trivial_tree" }

[dependencies.sha256]
version = "1.5"
default-features = false
