[workspace]
[package]
version = "0.1.0"
name = "store-tree-script"
edition = "2021"

[dependencies]
rand = "0.8.5"
sp1-sdk = { git = "https://github.com/delehef/sp1.git" }
blake2 = "0.10"
hex = "0.4"

[dependencies.sha256]
version = "1.5"
default-features = false


[build-dependencies]
sp1-helper = { git = "https://github.com/delehef/sp1.git" }
